# cpuid

./: .gitignore  README.md  cache.c  extensions.c  main.c  meson.build  queries.h
.github/workflows/: main.yml
include/: cq.h
src/: cache.c  extensions.c  info.c  main.c  pycq.c  queries.h
